@@ -1,5 +1,10 @@
 2005-06-03  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/21853
+	* g++.dg/expr/static_cast6.C: New test.
+
+2005-06-03  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/21336
 	* g++.dg/template/new2.C: New test.
 
